test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-03 21:35:41.406055

